# obs-wayland-hotkeys

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/actions/run-gersemi/: action.yaml
.github/scripts/utils.zsh/: setup_ubuntu
.github/workflows/: build-project.yaml  check-format.yaml  push.yaml
cmake/common/: buildspec_common.cmake  compiler_common.cmake  osconfig.cmake
cmake/linux/: compilerconfig.cmake
src/: main.cpp  shortcutsPortal.cpp  shortcutsPortal.h
